header dark mode sticky logo fix when justuno banner is displaying.

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -122,7 +122,7 @@
   .dark .nav-learn-blog { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/isExternalLink_white.svg); }
   .dark .checkmark-list { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/checkmark.svg); }
   .dark .logo { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/sp-logo-dark.svg); }
-  .dark .stuck .logo { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/logo_symbol.svg); }
+  .dark .stuck .logo, .dark .sticky .logo { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/logo_symbol.svg); }
   .dark .hasBoxes { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/boxes_white.svg); }
   .dark .arrow-link::after, .dark .nav-link-arrow::after { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/nav_link_arrow_white.svg); }
   .dark .isExternalLink:after { background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/img/isExternalLink_white.svg); }
